--- a/debian/rules
+++ b/debian/rules
@@ -163,7 +163,7 @@ install: DH_OPTIONS=
 install: build
 	dh_testdir
 	dh_testroot
-	dh_clean -k
+	dh_prep
 	dh_installdirs
 	# Install ALL dirs into tmp also. Unfortunately there's no easy way...
 	mkdir -p debian/tmp/sbin
