--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 7.0.50~), bzip2, libncurses5-dev | libncurses-dev,
  xutils-dev | imake, tcl-dev, linuxdoc-tools (>=0.9.20), groff, libtool,
  libxaw7-dev, libreadline-dev, libpcap0.8-dev, autotools-dev,
  automake1.7, automake1.9, autoconf2.13, autoconf, libssl-dev, psutils,
- lsb-release, po-debconf
+ lsb-release, po-debconf, ppp-dev
 Homepage: http://www.isdn4linux.de
 Vcs-Git: git://git.debian.org/git/collab-maint/isdnutils.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/isdnutils.git
