--- a/debian/control
+++ b/debian/control
@@ -143,6 +143,7 @@ Package: libcapi20-dev
 Architecture: linux-any
 Section: libdevel
 Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Replaces: libcapi20-3 (<< 1:3.9.20060704+dfsg.3-4)
 Suggests: isdnutils-doc
 Description: ISDN utilities - CAPI development libraries
  If you have an ISDN card with which CAPI works, you may be able to use
