debian/isdnvboxserver.config: process debconf errors properly. Closes: #601768

--- a/debian/isdnvboxserver.config
+++ b/debian/isdnvboxserver.config
@@ -1,10 +1,6 @@
 #!/bin/sh
 
-# FIXME: abort on error should be turned on but breaks upgrades
-# http://bugs.debian.org/601768 and http://bugs.debian.org/554537
-# needs further analysis
-#
-# set -e
+set -e
 
 # Vars involved, and how they're used:
 #
@@ -161,26 +157,27 @@ fi
 ######################################################################
 # Now ask the questions
 
-db_input critical isdnvboxserver/msn
-if [ $? -eq 30 ]; then
+STATUS=0
+db_input critical isdnvboxserver/msn || STATUS=$?
+if [ $STATUS -eq 30 ]; then
 	exit 0
 fi
-db_go
-if [ $? -eq 30 ]; then
+db_go || STATUS=$?
+if [ $STATUS -eq 30 ]; then
 	exit 0
 fi
-db_get isdnvboxserver/msn
+db_get isdnvboxserver/msn || STATUS=$?
 if [ -z "$RET" -o "`echo "$RET" | tr A-Z a-z`" = "quit" ]; then
 	exit 0
 fi
 asked=true
 while $asked ; do
-	db_input critical isdnvboxserver/daemonuser
-	if [ $? -eq 30 ]; then
+	db_input critical isdnvboxserver/daemonuser || STATUS=$?
+	if [ $STATUS -eq 30 ]; then
 		asked=false # question not asked
 	fi
-	db_go
-	if [ $? -eq 30 ]; then
+	db_go || STATUS=$?
+	if [ $STATUS -eq 30 ]; then
 		exit 1  # cancel selected
 	fi
 	db_get isdnvboxserver/daemonuser || true
@@ -211,8 +208,8 @@ done
 # db_input medium isdnvboxserver/rings
 # db_input medium isdnvboxserver/attachmsg
 if db_input high   isdnvboxserver/user ; then
-    db_go
-    if [ $? -eq 30 ]; then
+    db_go || STATUS=$?
+    if [ $STATUS -eq 30 ]; then
 	exit 0	# cancel selected
     fi
 fi
@@ -221,8 +218,8 @@ VBOX_USER=$RET
 if [ ! -z "$VBOX_USER" ]; then # don't ask password if no user entered
 	db_subst isdnvboxserver/password User $VBOX_USER
 	db_input high   isdnvboxserver/password
-	db_go
-	if [ $? -eq 30 ]; then
+	db_go || STATUS=$?
+	if [ $STATUS -eq 30 ]; then
 		exit 0	# cancel selected
 	fi
 fi
@@ -236,8 +233,8 @@ if egrep -q 'vboxgetty' /etc/inittab; then
 	: # already in inittab
 else
 	db_input high isdnvboxserver/doinit
-	db_go
-	if [ $? -eq 30 ]; then
+	db_go || STATUS=$?
+	if [ $STATUS -eq 30 ]; then
 		exit 0	# cancel selected
 	fi
 fi
