--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.9.3
 Build-Depends: debhelper (>= 9), bzip2, libncurses5-dev | libncurses-dev,
  xutils-dev | imake, tcl-dev, linuxdoc-tools (>=0.9.20), groff, libtool,
  libxaw7-dev, libreadline-dev, libpcap0.8-dev, autotools-dev,
- automake1.7, automake1.9, autoconf2.13, autoconf, libssl-dev, psutils,
+ automake, autoconf, libssl-dev, psutils,
  lsb-release, po-debconf, ppp-dev
 Homepage: http://www.isdn4linux.de
 Vcs-Git: git://git.debian.org/git/collab-maint/isdnutils.git
