--- a/debian/control
+++ b/debian/control
@@ -22,8 +22,7 @@ Depends: ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
 Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
 Description: ISDN utilities - minimal set
  This package provides the basic set of ISDN utilities needed to make use
- of an ISDN card. For more complete functionality, install the isdnutils
- dependency package.
+ of an ISDN card.
 
 Package: isdnutils-xtools
 Architecture: linux-any
@@ -132,10 +131,8 @@ Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: isdnutils-doc
 Description: ISDN utilities - CAPI support libraries
- If you have an ISDN card with which CAPI works, you may be able to use
- CAPI-capable applications such as fax systems. At this point, AVM cards can
- work with CAPI, as well as some active cards. For the AVM passive cards you
- need to visit the www.AVM.de website.
+ Handle requests from CAPI-driven applications such as fax systems via active
+ and passive ISDN cards.
  .
  This package will be installed automatically if needed.
 
@@ -146,11 +143,6 @@ Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Replaces: libcapi20-3 (<< 1:3.9.20060704+dfsg.3-4)
 Suggests: isdnutils-doc
 Description: ISDN utilities - CAPI development libraries
- If you have an ISDN card with which CAPI works, you may be able to use
- CAPI-capable applications such as fax systems. At this point, AVM cards can
- work with CAPI, as well as some active cards. For the AVM passive cards you
- need to visit the www.AVM.de website.
- .
  This package provides files needed for development of CAPI-aware software.
 
 Package: pppdcapiplugin
@@ -160,10 +152,8 @@ Depends: ppp (>= 2.4.4), ppp (<< 2.4.6), libcapi20-3 (= ${binary:Version}),
 Section: net
 Description: ISDN utilities - pppd plug-in for CAPI support
  Some ISDN cards can be used by CAPI utilities - for instance the AVM
- passive cards, when a module from the AVM website is loaded.
- .
- This package provides a plug-in for the regular PPP daemon to use CAPI
- on such cards.
+ passive cards. This package provides a plug-in for the regular PPP
+ daemon to drive such cards via CAPI.
 
 # Package: isdnactivecards
 # Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
