{ipppd,isdnlog}.config: turn on abort on error

--- a/debian/ipppd.config
+++ b/debian/ipppd.config
@@ -3,6 +3,8 @@
 # Source debconf library.
 . /usr/share/debconf/confmodule
 
+set -e
+
 loop=true
 while $loop; do
     db_input low ipppd/whichif
@@ -35,8 +37,8 @@ if [ -s "/etc/isdn/device.$ipppd_if" -o -s "/etc/isdn/ipppd.$ipppd_if" ]; then
 fi
 
 db_input high ipppd/ispphone
-db_go
-if [ $? -eq 30 ]; then
+db_go ; status=$?
+if [ $status -eq 30 ]; then
         db_stop
         exit 0  # cancel selected
 fi
