--- a/debian/isdnlog.config
+++ b/debian/isdnlog.config
@@ -3,7 +3,7 @@
 # Source debconf library.
 . /usr/share/debconf/confmodule
 
-set +e
+set -e
 
 if [ -s /etc/isdn/isdn.conf ]; then
     countrycode=`perl -ne 'if (/^COUNTRYCODE=0*(\d+)/) { print $1; }' /etc/isdn/isdn.conf`
@@ -35,9 +35,9 @@ if [ -s /etc/isdn/isdn.conf ]; then
         db_set isdnlog/areaprefix "$areaprefix"
     fi
 fi
-db_input high isdnlog/country
-db_go
-if [ $? -eq 30 ]; then
+db_input high isdnlog/country || true
+db_go ; status=$?
+if [ $status -eq 30 ]; then
 	exit 1	# cancel selected
 fi
 db_get isdnlog/country
@@ -55,21 +55,21 @@ case "$default_country" in
 	NL)	default_countrycode=31;;
 	NO)	default_countrycode=47;;
 	*)	default_countrycode=''
-		db_input high isdnlog/country_manual
+		db_input high isdnlog/country_manual || true
                 # next two are for description for isdnlog/countrycode
                 default_country=DE
                 default_countrycode=49
 		no_set_countrycode=true
 		;;
 esac
-db_input low isdnlog/countryprefix
+db_input low isdnlog/countryprefix || true
 db_subst isdnlog/countrycode default_country $default_country
 db_subst isdnlog/countrycode default_countrycode $default_countrycode
 $no_set_countrycode || db_set isdnlog/countrycode "$default_countrycode"
-db_input low isdnlog/countrycode
+db_input low isdnlog/countrycode || true
 if $useareacode; then
-	db_input low isdnlog/areaprefix
-	db_input high isdnlog/areacode
+	db_input low isdnlog/areaprefix || true
+	db_input high isdnlog/areacode || true
 fi
 daemon=false # defaults
 #not used yet# socket=/var/run/isdnrate/socket
@@ -81,6 +81,6 @@ if $daemon; then
 else
     db_set isdnlog/isdnrate-daemon "no"
 fi
-db_input low isdnlog/isdnrate-daemon
+db_input low isdnlog/isdnrate-daemon || true
 db_go
 db_stop
