{isdnlog,ipppd}: protect more db_* calls with "||true". Closes: #671877

--- a/debian/isdnlog.config
+++ b/debian/isdnlog.config
@@ -36,7 +36,7 @@ if [ -s /etc/isdn/isdn.conf ]; then
     fi
 fi
 db_input high isdnlog/country || true
-db_go ; status=$?
+db_go || status=$?
 if [ $status -eq 30 ]; then
 	exit 1	# cancel selected
 fi
