--- a/debian/ipppd.config
+++ b/debian/ipppd.config
@@ -7,7 +7,7 @@ set -e
 
 loop=true
 while $loop; do
-    db_input low ipppd/whichif
+    db_input low ipppd/whichif || true
     db_go
     db_get ipppd/whichif || true
     case "x$RET" in
@@ -20,7 +20,7 @@ while $loop; do
             loop=false
             ;;
         *)
-            db_input low ipppd/wrongif
+            db_input low ipppd/wrongif || true
             db_go
             ;;
     esac
@@ -29,15 +29,15 @@ done
 ipppd_if="$RET"
 
 if [ -s "/etc/isdn/device.$ipppd_if" -o -s "/etc/isdn/ipppd.$ipppd_if" ]; then
-    db_subst ipppd/ispwontdoit IPPP0 "$ipppd_if"
-    db_input high ipppd/ispwontdoit
+    db_subst ipppd/ispwontdoit IPPP0 "$ipppd_if" || true
+    db_input high ipppd/ispwontdoit || true
     # db_set ipppd/ispphone 'manual'
     db_go
     exit 0      # files are there, not touching
 fi
 
-db_input high ipppd/ispphone
-db_go ; status=$?
+db_input high ipppd/ispphone || true
+db_go || status=$?
 if [ $status -eq 30 ]; then
         db_stop
         exit 0  # cancel selected
@@ -49,30 +49,25 @@ if [ "$RET" = '' -o "$RET" = none -o "$RET" = blank -o "$RET" = manual ]; then
     exit 0      # no configuration wanted
 fi
 
-db_input medium ipppd/eaz
-db_input high ipppd/isplogin
-db_input high ipppd/isppasswd
+db_input medium ipppd/eaz || true
+db_input high ipppd/isplogin || true
+db_input high ipppd/isppasswd || true
 db_go
 RET=''
 db_get ipppd/isplogin || true
 if grep "^$RET[ 	]" /etc/ppp/pap-secrets >/dev/null 2>&1; then
     if grep "^$RET[ 	]" /etc/ppp/chap-secrets >/dev/null 2>&1; then
-        db_input high ipppd/isploginpapchapalreadythere
+        db_input high ipppd/isploginpapchapalreadythere || true
     else
-        db_input high ipppd/isploginpapalreadythere
+        db_input high ipppd/isploginpapalreadythere || true
     fi
     db_go
 else
     if grep "^$RET[ 	]" /etc/ppp/chap-secrets >/dev/null 2>&1; then
-        db_input high ipppd/isploginchapalreadythere
+        db_input high ipppd/isploginchapalreadythere || true
         db_go
     fi
 fi
-
-#if [ $? -eq 30 ]; then
-#        db_stop
-#        exit 0  # cancel selected
-#fi
 
 db_stop
 exit 0
