--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Rolf Leggewie <foss@rolf.leggewie.biz>
 Uploaders: Jan-Michael Brummer <jan.brummer@tabos.org>
 DM-Upload-Allowed: yes
 Standards-Version: 3.9.3
-Build-Depends: debhelper (>= 8.1.0), bzip2, libncurses5-dev | libncurses-dev,
+Build-Depends: debhelper (>= 9), bzip2, libncurses5-dev | libncurses-dev,
  xutils-dev | imake, tcl-dev, linuxdoc-tools (>=0.9.20), groff, libtool,
  libxaw7-dev, libreadline-dev, libpcap0.8-dev, autotools-dev,
  automake1.7, automake1.9, autoconf2.13, autoconf, libssl-dev, psutils,
@@ -128,6 +128,8 @@ Description: ISDN utilities - tools for CAPI-capable cards
 Package: libcapi20-3
 Architecture: linux-any
 Section: libs
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: isdnutils-doc
 Description: ISDN utilities - CAPI support libraries
@@ -139,6 +141,7 @@ Description: ISDN utilities - CAPI support libraries
 Package: libcapi20-dev
 Architecture: linux-any
 Section: libdevel
+Multi-Arch: same
 Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Replaces: libcapi20-3 (<< 1:3.9.20060704+dfsg.3-4)
 Suggests: isdnutils-doc
