--- a/debian/rules
+++ b/debian/rules
@@ -15,7 +15,7 @@ override_dh_auto_build:
 	for d in capi20 capifax capiinfo capiinit rcapid vbox eicon ipppd; do \
 	  echo "Regenerating autotools files in $$d ..."; \
 	  cd $$d; \
-	  echo "  autoreconf"; autoreconf -i; \
+	  echo "  autoreconf"; autoreconf -if; \
 	  cd ..; \
 	done
 
